[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scripts/Prologue.gd" type="Script" id=1]
[ext_resource path="res://Audio/click1.ogg" type="AudioStream" id=2]
[ext_resource path="res://User Interface/Main Menu.tres" type="Theme" id=3]
[ext_resource path="res://Characters/Player/Red Mage.png" type="Texture" id=4]
[ext_resource path="res://Characters/Blue Mage/Walk 1.png" type="Texture" id=5]
[ext_resource path="res://TileSets/BackgroundTileset.tres" type="TileSet" id=6]
[ext_resource path="res://TileSets/InsideTiles.tres" type="TileSet" id=7]
[ext_resource path="res://TileSets/Dark Grass/DarkGrassTileset.tres" type="TileSet" id=8]
[ext_resource path="res://Scripts/MagePrologue.gd" type="Script" id=9]
[ext_resource path="res://Characters/Player/walk 1.png" type="Texture" id=10]
[ext_resource path="res://Characters/Player/walk 2.png" type="Texture" id=11]
[ext_resource path="res://Characters/Player/walk 3.png" type="Texture" id=12]
[ext_resource path="res://Characters/Player/walk 4.png" type="Texture" id=13]
[ext_resource path="res://Characters/Player/walk 5.png" type="Texture" id=14]
[ext_resource path="res://Characters/Player/Idle.png" type="Texture" id=15]
[ext_resource path="res://Characters/Blue Mage/Walk 2.png" type="Texture" id=16]
[ext_resource path="res://Characters/Blue Mage/Walk Fix/Walk 3.png" type="Texture" id=17]
[ext_resource path="res://Characters/Blue Mage/Walk 4.png" type="Texture" id=18]
[ext_resource path="res://Characters/Blue Mage/Walk Fix/Walk 5.png" type="Texture" id=19]
[ext_resource path="res://Characters/Blue Mage/Idle 2.png" type="Texture" id=20]
[ext_resource path="res://Characters/Blue Mage/Idle 1.png" type="Texture" id=21]
[ext_resource path="res://Stuff/Button and Door/DoorAndButton.tscn" type="PackedScene" id=22]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": true,
"name": "Walk",
"speed": 15.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 15 ) ],
"loop": true,
"name": "Idle",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 5 ) ],
"loop": true,
"name": "Walk",
"speed": 15.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "Idle",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12, 16 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 32, 48 )

[node name="Prologue" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 15

[node name="ClickSound" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource( 2 )

[node name="Dialogue" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 3 )

[node name="Chat1" type="Control" parent="CanvasLayer/Dialogue"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer/Dialogue/Chat1"]
position = Vector2( 48, 256 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Dialogue/Chat1"]
margin_top = 272.0
margin_right = 620.0
margin_bottom = 340.0
color = Color( 0, 0, 0, 1 )

[node name="Text" type="Label" parent="CanvasLayer/Dialogue/Chat1"]
margin_left = 16.0
margin_top = 272.0
margin_right = 64.0
margin_bottom = 299.0
text = "Red Mage:
Seems like we're here. Hmm, So... What kind of power does the Stone of Chaos
grant? At the same time, is it safe?"

[node name="Next" type="Button" parent="CanvasLayer/Dialogue/Chat1"]
modulate = Color( 0, 0.505882, 1, 1 )
margin_left = 560.0
margin_top = 304.0
margin_right = 596.0
margin_bottom = 322.0
text = "Next"

[node name="Chat2" type="Control" parent="CanvasLayer/Dialogue"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/Dialogue/Chat2"]
position = Vector2( 48, 256 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Dialogue/Chat2"]
margin_top = 272.0
margin_right = 620.0
margin_bottom = 340.0
color = Color( 0, 0, 0, 1 )

[node name="Text" type="Label" parent="CanvasLayer/Dialogue/Chat2"]
margin_left = 16.0
margin_top = 272.0
margin_right = 64.0
margin_bottom = 299.0
text = "Blue Mage:
The Stone of Chaos grants you large amounts of energy, enough to cast
three grand spells, At the same time, Chaotic energy will flow into your
body which can cause you to explode if you can't contain the artifact's power"

[node name="Next" type="Button" parent="CanvasLayer/Dialogue/Chat2"]
modulate = Color( 0, 0.505882, 1, 1 )
margin_left = 560.0
margin_top = 304.0
margin_right = 596.0
margin_bottom = 322.0
text = "Next"

[node name="Chat3" type="Control" parent="CanvasLayer/Dialogue"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/Dialogue/Chat3"]
position = Vector2( 48, 256 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Dialogue/Chat3"]
margin_top = 272.0
margin_right = 620.0
margin_bottom = 340.0
color = Color( 0, 0, 0, 1 )

[node name="Text" type="Label" parent="CanvasLayer/Dialogue/Chat3"]
margin_left = 16.0
margin_top = 272.0
margin_right = 64.0
margin_bottom = 299.0
text = "Red Mage:
Chat 3"

[node name="Next" type="Button" parent="CanvasLayer/Dialogue/Chat3"]
modulate = Color( 0, 0.505882, 1, 1 )
margin_left = 560.0
margin_top = 304.0
margin_right = 596.0
margin_bottom = 322.0
text = "Next"

[node name="Skip" type="Button" parent="CanvasLayer/Dialogue"]
modulate = Color( 0.937255, 0.0705882, 0.0705882, 1 )
margin_left = 467.0
margin_top = 304.0
margin_right = 544.0
margin_bottom = 322.0
text = "Skip Dialogue"

[node name="Background" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
cell_size = Vector2( 100, 100 )
format = 1
tile_data = PoolIntArray( 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 65536, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 2, 0, 65541, 2, 0, 65542, 2, 0, 131072, 2, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 131076, 2, 0, 131077, 2, 0, 131078, 2, 0, 196608, 2, 0, 196609, 2, 0, 196610, 2, 0, 196611, 2, 0, 196612, 2, 0, 196613, 2, 0, 196614, 2, 0 )

[node name="InsideTiles" type="TileMap" parent="."]
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0, 262164, 1, 0, 262165, 1, 0, 262166, 1, 0, 262167, 1, 0, 262168, 1, 0, 262169, 1, 0, 262170, 1, 0, 262171, 1, 0, 262172, 1, 0, 262173, 1, 0, 262174, 1, 0, 262175, 1, 0, 262176, 1, 0, 262177, 1, 0, 262178, 1, 0, 262179, 1, 0, 262180, 1, 0, 262181, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327699, 1, 0, 327700, 1, 0, 327701, 1, 0, 327702, 1, 0, 327703, 1, 0, 327704, 1, 0, 327705, 1, 0, 327706, 1, 0, 327707, 1, 0, 327708, 1, 0, 327709, 1, 0, 327710, 1, 0, 327711, 1, 0, 327712, 1, 0, 327713, 1, 0, 327714, 1, 0, 327715, 1, 0, 327716, 1, 0, 327717, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 393236, 1, 0, 393237, 1, 0, 393238, 1, 0, 393239, 1, 0, 393240, 1, 0, 393241, 1, 0, 393242, 1, 0, 393243, 1, 0, 393244, 1, 0, 393245, 1, 0, 393246, 1, 0, 393247, 1, 0, 393248, 1, 0, 393249, 1, 0, 393250, 1, 0, 393251, 1, 0, 393252, 1, 0, 393253, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 458772, 1, 0, 458773, 1, 0, 458774, 1, 0, 458775, 1, 0, 458776, 1, 0, 458777, 1, 0, 458778, 1, 0, 458779, 1, 0, 458780, 1, 0, 458781, 1, 0, 458782, 1, 0, 458783, 1, 0, 458784, 1, 0, 458785, 1, 0, 458786, 1, 0, 458787, 1, 0, 458788, 1, 0, 458789, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 0, 524309, 1, 0, 524310, 1, 0, 524311, 1, 0, 524312, 1, 0, 524313, 1, 0, 524314, 1, 0, 524315, 1, 0, 524316, 1, 0, 524317, 1, 0, 524318, 1, 0, 524319, 1, 0, 524320, 1, 0, 524321, 1, 0, 524322, 1, 0, 524323, 1, 0, 524324, 1, 0, 524325, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 589844, 1, 0, 589845, 1, 0, 589846, 1, 0, 589847, 1, 0, 589848, 1, 0, 589849, 1, 0, 589850, 1, 0, 589851, 1, 0, 589852, 1, 0, 589853, 1, 0, 589854, 1, 0, 589855, 1, 0, 589856, 1, 0, 589857, 1, 0, 589858, 1, 0, 589859, 1, 0, 589860, 1, 0, 589861, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 1, 0, 655380, 1, 0, 655381, 1, 0, 655382, 1, 0, 655383, 1, 0, 655384, 1, 0, 655385, 1, 0, 655386, 1, 0, 655387, 1, 0, 655388, 1, 0, 655389, 1, 0, 655390, 1, 0, 655391, 1, 0, 655392, 1, 0, 655393, 1, 0, 655394, 1, 0, 655395, 1, 0, 655396, 1, 0, 655397, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 1, 0, 720917, 1, 0, 720918, 1, 0, 720919, 1, 0, 720920, 1, 0, 720921, 1, 0, 720922, 1, 0, 720923, 1, 0, 720924, 1, 0, 720925, 1, 0, 720926, 1, 0, 720927, 1, 0, 720928, 1, 0, 720929, 1, 0, 720930, 1, 0, 720931, 1, 0, 720932, 1, 0, 720933, 1, 0, 720934, 1, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 1, 0, 786451, 1, 0, 786452, 1, 0, 786453, 1, 0, 786454, 1, 0, 786455, 1, 0, 786456, 1, 0, 786457, 1, 0, 786458, 1, 0, 786459, 1, 0, 786460, 1, 0, 786461, 1, 0, 786462, 1, 0, 786463, 1, 0, 786464, 1, 0, 786465, 1, 0, 786466, 1, 0, 786467, 1, 0, 786468, 1, 0, 786469, 1, 0, 786470, 1, 0, 851969, 1, 0, 851970, 1, 0, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851985, 1, 0, 851986, 1, 0, 851987, 1, 0, 851988, 1, 0, 851989, 1, 0, 851990, 1, 0, 851991, 1, 0, 851992, 1, 0, 851993, 1, 0, 851994, 1, 0, 851995, 1, 0, 851996, 1, 0, 851997, 1, 0, 851998, 1, 0, 851999, 1, 0, 852000, 1, 0, 852001, 1, 0, 852002, 1, 0, 852003, 1, 0, 852004, 1, 0, 852005, 1, 0, 852006, 1, 0 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 8 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 13, 0, 1, 13, 0, 2, 13, 0, 3, 13, 0, 4, 13, 0, 5, 13, 0, 6, 13, 0, 7, 13, 0, 8, 13, 0, 9, 13, 0, 10, 13, 0, 11, 13, 0, 12, 13, 0, 13, 13, 0, 14, 13, 0, 15, 13, 0, 16, 13, 0, 17, 13, 0, 18, 13, 0, 19, 13, 0, 20, 13, 0, 21, 13, 0, 22, 13, 0, 23, 13, 0, 24, 13, 0, 25, 13, 0, 26, 13, 0, 27, 13, 0, 28, 13, 0, 29, 13, 0, 30, 13, 0, 31, 13, 0, 32, 13, 0, 33, 13, 0, 34, 13, 0, 35, 13, 0, 36, 13, 0, 37, 13, 0, 38, 13, 0, 65536, 13, 0, 65537, 13, 0, 65538, 13, 0, 65539, 13, 0, 65540, 13, 0, 65541, 13, 0, 65542, 13, 0, 65543, 13, 0, 65544, 13, 0, 65545, 13, 0, 65546, 13, 0, 65547, 13, 0, 65548, 13, 0, 65549, 13, 0, 65550, 13, 0, 65551, 13, 0, 65552, 13, 0, 65553, 13, 0, 65554, 13, 0, 65555, 13, 0, 65556, 13, 0, 65557, 13, 0, 65558, 13, 0, 65559, 13, 0, 65560, 13, 0, 65561, 13, 0, 65562, 13, 0, 65563, 13, 0, 65564, 13, 0, 65565, 13, 0, 65566, 13, 0, 65567, 13, 0, 65568, 13, 0, 65569, 13, 0, 65570, 13, 0, 65571, 13, 0, 65572, 13, 0, 65573, 13, 0, 65574, 13, 0, 131072, 13, 0, 131073, 13, 0, 131074, 13, 0, 131075, 13, 0, 131076, 13, 0, 131077, 13, 0, 131078, 13, 0, 131079, 13, 0, 131080, 13, 0, 131081, 13, 0, 131082, 13, 0, 131083, 13, 0, 131084, 13, 0, 131085, 13, 0, 131086, 13, 0, 131087, 13, 0, 131088, 13, 0, 131089, 13, 0, 131090, 13, 0, 131091, 13, 0, 131092, 13, 0, 131093, 13, 0, 131094, 13, 0, 131095, 13, 0, 131096, 13, 0, 131097, 13, 0, 131098, 13, 0, 131099, 13, 0, 131100, 13, 0, 131101, 13, 0, 131102, 13, 0, 131103, 13, 0, 131104, 13, 0, 131105, 13, 0, 131106, 13, 0, 131107, 13, 0, 131108, 13, 0, 131109, 13, 0, 131110, 13, 0, 196608, 13, 0, 196609, 13, 0, 196610, 13, 0, 196611, 13, 0, 196612, 13, 0, 196613, 13, 0, 196614, 13, 0, 196615, 13, 0, 196616, 13, 0, 196617, 13, 0, 196618, 13, 0, 196619, 13, 0, 196620, 13, 0, 196621, 13, 0, 196622, 13, 0, 196623, 13, 0, 196624, 13, 0, 196625, 13, 0, 196626, 13, 0, 196627, 13, 0, 196628, 13, 0, 196629, 13, 0, 196630, 13, 0, 196631, 13, 0, 196632, 13, 0, 196633, 13, 0, 196634, 13, 0, 196635, 13, 0, 196636, 13, 0, 196637, 13, 0, 196638, 13, 0, 196639, 13, 0, 196640, 13, 0, 196641, 13, 0, 196642, 13, 0, 196643, 13, 0, 196644, 13, 0, 196645, 13, 0, 196646, 13, 0, 262144, 13, 0, 262182, 13, 0, 327680, 13, 0, 327718, 13, 0, 393216, 13, 0, 393254, 13, 0, 458752, 13, 0, 458790, 13, 0, 524288, 13, 0, 524326, 13, 0, 524341, 13, 0, 589824, 13, 0, 589862, 13, 0, 589877, 13, 0, 655360, 13, 0, 655398, 13, 0, 655413, 13, 0, 720949, 13, 0, 786485, 13, 0, 852021, 13, 0, 917504, 13, 0, 917505, 13, 0, 917506, 13, 0, 917507, 13, 0, 917508, 13, 0, 917509, 13, 0, 917510, 13, 0, 917511, 13, 0, 917512, 13, 0, 917513, 13, 0, 917514, 13, 0, 917515, 13, 0, 917516, 13, 0, 917517, 13, 0, 917518, 13, 0, 917519, 13, 0, 917520, 13, 0, 917521, 13, 0, 917522, 13, 0, 917523, 13, 0, 917524, 13, 0, 917525, 13, 0, 917526, 13, 0, 917527, 13, 0, 917528, 13, 0, 917529, 13, 0, 917530, 13, 0, 917531, 13, 0, 917532, 13, 0, 917533, 13, 0, 917534, 13, 0, 917535, 13, 0, 917536, 13, 0, 917537, 13, 0, 917538, 13, 0, 917539, 13, 0, 917540, 13, 0, 917541, 13, 0, 917542, 13, 0, 917543, 13, 0, 917544, 13, 0, 917545, 13, 0, 917546, 13, 0, 917547, 13, 0, 917548, 13, 0, 917549, 13, 0, 917550, 13, 0, 917551, 13, 0, 917552, 13, 0, 917553, 13, 0, 917554, 13, 0, 917555, 13, 0, 917556, 13, 0, 917557, 13, 0, 983040, 1, 0, 983041, 1, 0, 983042, 1, 0, 983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983046, 1, 0, 983047, 1, 0, 983048, 1, 0, 983049, 1, 0, 983050, 1, 0, 983051, 1, 0, 983052, 1, 0, 983053, 1, 0, 983054, 1, 0, 983055, 1, 0, 983056, 1, 0, 983057, 1, 0, 983058, 1, 0, 983059, 1, 0, 983060, 1, 0, 983061, 1, 0, 983062, 1, 0, 983063, 1, 0, 983064, 1, 0, 983065, 1, 0, 983066, 1, 0, 983067, 1, 0, 983068, 1, 0, 983069, 1, 0, 983070, 1, 0, 983071, 1, 0, 983072, 1, 0, 983073, 1, 0, 983074, 1, 0, 983075, 1, 0, 983076, 1, 0, 983077, 1, 0, 983078, 1, 0, 1048576, 4, 0, 1048577, 4, 0, 1048578, 4, 0, 1048579, 4, 0, 1048580, 4, 0, 1048581, 4, 0, 1048582, 4, 0, 1048583, 4, 0, 1048584, 4, 0, 1048585, 4, 0, 1048586, 4, 0, 1048587, 4, 0, 1048588, 4, 0, 1048589, 4, 0, 1048590, 4, 0, 1048591, 4, 0, 1048592, 4, 0, 1048593, 4, 0, 1048594, 4, 0, 1048595, 4, 0, 1048596, 4, 0, 1048597, 4, 0, 1048598, 4, 0, 1048599, 4, 0, 1048600, 4, 0, 1048601, 4, 0, 1048602, 4, 0, 1048603, 4, 0, 1048604, 4, 0, 1048605, 4, 0, 1048606, 4, 0, 1048607, 4, 0, 1048608, 4, 0, 1048609, 4, 0, 1048610, 4, 0, 1048611, 4, 0, 1048612, 4, 0, 1048613, 4, 0, 1048614, 4, 0, 1114112, 4, 0, 1114113, 4, 0, 1114114, 4, 0, 1114115, 4, 0, 1114116, 4, 0, 1114117, 4, 0, 1114118, 4, 0, 1114119, 4, 0, 1114120, 4, 0, 1114121, 4, 0, 1114122, 4, 0, 1114123, 4, 0, 1114124, 4, 0, 1114125, 4, 0, 1114126, 4, 0, 1114127, 4, 0, 1114128, 4, 0, 1114129, 4, 0, 1114130, 4, 0, 1114131, 4, 0, 1114132, 4, 0, 1114133, 4, 0, 1114134, 4, 0, 1114135, 4, 0, 1114136, 4, 0, 1114137, 4, 0, 1114138, 4, 0, 1114139, 4, 0, 1114140, 4, 0, 1114141, 4, 0, 1114142, 4, 0, 1114143, 4, 0, 1114144, 4, 0, 1114145, 4, 0, 1114146, 4, 0, 1114147, 4, 0, 1114148, 4, 0, 1114149, 4, 0, 1114150, 4, 0, 1179648, 4, 0, 1179649, 4, 0, 1179650, 4, 0, 1179651, 4, 0, 1179652, 4, 0, 1179653, 4, 0, 1179654, 4, 0, 1179655, 4, 0, 1179656, 4, 0, 1179657, 4, 0, 1179658, 4, 0, 1179659, 4, 0, 1179660, 4, 0, 1179661, 4, 0, 1179662, 4, 0, 1179663, 4, 0, 1179664, 4, 0, 1179665, 4, 0, 1179666, 4, 0, 1179667, 4, 0, 1179668, 4, 0, 1179669, 4, 0, 1179670, 4, 0, 1179671, 4, 0, 1179672, 4, 0, 1179673, 4, 0, 1179674, 4, 0, 1179675, 4, 0, 1179676, 4, 0, 1179677, 4, 0, 1179678, 4, 0, 1179679, 4, 0, 1179680, 4, 0, 1179681, 4, 0, 1179682, 4, 0, 1179683, 4, 0, 1179684, 4, 0, 1179685, 4, 0, 1179686, 4, 0, 1245184, 4, 0, 1245185, 4, 0, 1245186, 4, 0, 1245187, 4, 0, 1245188, 4, 0, 1245189, 4, 0, 1245190, 4, 0, 1245191, 4, 0, 1245192, 4, 0, 1245193, 4, 0, 1245194, 4, 0, 1245195, 4, 0, 1245196, 4, 0, 1245197, 4, 0, 1245198, 4, 0, 1245199, 4, 0, 1245200, 4, 0, 1245201, 4, 0, 1245202, 4, 0, 1245203, 4, 0, 1245204, 4, 0, 1245205, 4, 0, 1245206, 4, 0, 1245207, 4, 0, 1245208, 4, 0, 1245209, 4, 0, 1245210, 4, 0, 1245211, 4, 0, 1245212, 4, 0, 1245213, 4, 0, 1245214, 4, 0, 1245215, 4, 0, 1245216, 4, 0, 1245217, 4, 0, 1245218, 4, 0, 1245219, 4, 0, 1245220, 4, 0, 1245221, 4, 0, 1245222, 4, 0, 1310720, 4, 0, 1310721, 4, 0, 1310722, 4, 0, 1310723, 4, 0, 1310724, 4, 0, 1310725, 4, 0, 1310726, 4, 0, 1310727, 4, 0, 1310728, 4, 0, 1310729, 4, 0, 1310730, 4, 0, 1310731, 4, 0, 1310732, 4, 0, 1310733, 4, 0, 1310734, 4, 0, 1310735, 4, 0, 1310736, 4, 0, 1310737, 4, 0, 1310738, 4, 0, 1310739, 4, 0, 1310740, 4, 0, 1310741, 4, 0, 1310742, 4, 0, 1310743, 4, 0, 1310744, 4, 0, 1310745, 4, 0, 1310746, 4, 0, 1310747, 4, 0, 1310748, 4, 0, 1310749, 4, 0, 1310750, 4, 0, 1310751, 4, 0, 1310752, 4, 0, 1310753, 4, 0, 1310754, 4, 0, 1310755, 4, 0, 1310756, 4, 0, 1310757, 4, 0, 1310758, 4, 0, 1376256, 4, 0, 1376257, 4, 0, 1376258, 4, 0, 1376259, 4, 0, 1376260, 4, 0, 1376261, 4, 0, 1376262, 4, 0, 1376263, 4, 0, 1376264, 4, 0, 1376265, 4, 0, 1376266, 4, 0, 1376267, 4, 0, 1376268, 4, 0, 1376269, 4, 0, 1376270, 4, 0, 1376271, 4, 0, 1376272, 4, 0, 1376273, 4, 0, 1376274, 4, 0, 1376275, 4, 0, 1376276, 4, 0, 1376277, 4, 0, 1376278, 4, 0, 1376279, 4, 0, 1376280, 4, 0, 1376281, 4, 0, 1376282, 4, 0, 1376283, 4, 0, 1376284, 4, 0, 1376285, 4, 0, 1376286, 4, 0, 1376287, 4, 0, 1376288, 4, 0, 1376289, 4, 0, 1376290, 4, 0, 1376291, 4, 0, 1376292, 4, 0, 1376293, 4, 0, 1376294, 4, 0 )

[node name="DialogueStartTime" type="Timer" parent="."]

[node name="Mages" type="Node" parent="."]

[node name="RedMagePrologue" type="KinematicBody2D" parent="Mages"]
position = Vector2( 416, 208 )
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Mages/RedMagePrologue"]
frames = SubResource( 1 )
animation = "Idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mages/RedMagePrologue"]
visible = false
shape = SubResource( 2 )

[node name="BlueMagePrologue" type="KinematicBody2D" parent="Mages"]
position = Vector2( 496, 208 )
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Mages/BlueMagePrologue"]
position = Vector2( 16, 0 )
frames = SubResource( 3 )
animation = "Idle"
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mages/BlueMagePrologue"]
visible = false
shape = SubResource( 4 )

[node name="Doors and Buttons" type="Node" parent="."]

[node name="DoorAndButton" parent="Doors and Buttons" instance=ExtResource( 22 )]
position = Vector2( 96, 176 )

[node name="Door" parent="Doors and Buttons/DoorAndButton" index="0"]
position = Vector2( -88, 24 )

[node name="Button" parent="Doors and Buttons/DoorAndButton" index="1"]
position = Vector2( -48, 40 )

[node name="DoorAndButton2" parent="Doors and Buttons" instance=ExtResource( 22 )]
position = Vector2( 576, 200 )

[node name="Door" parent="Doors and Buttons/DoorAndButton2" index="0"]
position = Vector2( 40, 0 )

[node name="Button" parent="Doors and Buttons/DoorAndButton2" index="1"]
position = Vector2( 0, 16 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 467, 208 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="ChangeScene" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChangeScene"]
position = Vector2( 816, 176 )
shape = SubResource( 5 )

[node name="ChangeTime" type="Timer" parent="."]
[connection signal="pressed" from="CanvasLayer/Dialogue/Chat1/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="CanvasLayer/Dialogue/Chat2/Next" to="." method="_on_Next2_pressed"]
[connection signal="pressed" from="CanvasLayer/Dialogue/Chat3/Next" to="." method="_on_Next3_pressed"]
[connection signal="pressed" from="CanvasLayer/Dialogue/Skip" to="." method="_on_Skip_pressed"]
[connection signal="timeout" from="DialogueStartTime" to="." method="_on_DialogueStartTime_timeout"]
[connection signal="body_entered" from="ChangeScene" to="." method="_on_ChangeScene_body_entered"]
[connection signal="timeout" from="ChangeTime" to="." method="_on_ChangeTime_timeout"]

[editable path="Doors and Buttons/DoorAndButton"]

[editable path="Doors and Buttons/DoorAndButton2"]
